modificacion del readme

--- a/pages/NIKE.html
+++ b/pages/NIKE.html
@@ -66,12 +66,12 @@
         </main>
         <footer>
             <section class="section-footer">
-                <div class="info">
+                <div>
                     <p>Derechos reservados por LaceUpLand 2023 Para suscribirse al newsletter y 
                         recibir promociones e
                         información registrarse en service@laceupland.com Buenos Aires, Argentina </p>
                 </div>
-                <div class="red">
+                <div>
                     <h2>redes sociales
                         <ul>
                             <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
@@ -79,7 +79,7 @@
                             <li><a href="https://www.tiktok.com/" target="_blank">TikTok</a></li>
                     </h2>
                 </div>
-                <div class="cliente">
+                <div>
                     <h2>centro de atención al cliente
                         <ul>
                             <li>Lunes a Viernes de 9 a 20 hs / sabado de 9 a 17 hs</li>
