--- a/pages/ADIDAS.html
+++ b/pages/ADIDAS.html
@@ -7,86 +7,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <header>
-        <h1 class="encabezado">LaceUpLand</h1>
-        <section>
-            <nav>
-                <ul class="navbar">
-                    <li><a href="./NIKE.html">NIKE</a></li>
-                    <li><a href="./SALE.html">SALE</a></li>
-                    <li><a href="./CONTACTO.html">CONTACTO</a></li>
-                    <li><a href="./ADIDAS.html">ADIDAS</a></li>
-                </ul>
-            </nav>
-        </section>
-    </header>
-    <main class="main">
-        <h2 class="adidas">sneakers adidas</h2>
-        <form action="">
-            <label for=""></label>
-            <input type="search">
-        </form>
-        <section class="section-adidas">
+    <header class="container-fluid">
+        <div class="">
             <div>
-                <h3>adidas yeezy boost 350 v2
-                    Zebra</h3>
-                <img src="../assets/yeezy-zebra.jpg" alt="adidas-Yeezy-Boost-350-V2-zebra">
-                <p><strong>$105.000</strong></p>
+                <h1 class="encabezado">LaceUpLand</h1>
             </div>
-            <div>
-                <h3>adidas yeezy boost 350 v2
-                    onyx</h3>
-                <img src="../assets/yeezy-onyx.png" alt="adidas-Yeezy-Boost-350-V2-onyx" class="adidas-negro">
-                <p><strong>$130.000</strong></p>
-            </div>
-            <div>
-                <h3>adidas forum buckle low
-                    bad bunny last forum</h3>
-                <img src="../assets/forum-bad-bunny.jpg" alt="">
-                <p><strong>$90.000</strong></p>
-            </div>
-            <div>
-                <h3>adidas ultra boost 4.0
-                    game of thrones white walkers</h3>
-                <img src="../assets/ultra-boost-GOT.jpg" alt="adidas-ultra-boost-4.0-white-walkers">
-                <p><strong>$170.000</strong></p>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <section class="section-footer">
-            <div>
-                <p>Derechos reservados por LaceUpLand 2023 Para suscribirse al newsletter y recibir promociones e
-                    información registrarse en service@laceupland.com Buenos Aires, Argentina </p>
-            </div>
-            <div>
-                <h2>redes sociales
-                    <ul>
-                        <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
-                        <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-                        <li><a href="https://www.tiktok.com/" target="_blank">TikTok</a></li>
-                </h2>
-            </div>
-            <div>
-                <h2>centro de atención al cliente
-                    <ul>
-                        <li>Lunes a Viernes de 9 a 20 hs / sabado de 9 a 17 hs</li>
-                        <li><a href="https://mail.google.com/">Contacto</a></li>
-                        <li><a href="https://web.whatsapp.com/">Whatsapp</a></li>
-                        <li>0810-655-5301</li>
+            <section>
+                <nav>
+                    <ul class="navbar">
+                        <li><a href="./NIKE.html">NIKE</a></li>
+                        <li><a href="./SALE.html">SALE</a></li>
+                        <li><a href="./CONTACTO.html">CONTACTO</a></li>
+                        <li><a href="./ADIDAS.html">ADIDAS</a></li>
                     </ul>
-                </h2>
+                </nav>
+            </section>
+        </div>
+    </header>
+    <aside class="container-fluid">
+        <div class="aside">
+            <h2 class="adidas">sneakers adidas</h2>
+            <form action="">
+                <label for=""></label>
+                <input type="search">
+            </form>
+            <div class="filtro-adidas">
+                <ul>
+                    <li>yeezy</li>
+                    <li>forum</li>
+                    <li>ultra boost</li>
+                </ul>
             </div>
-        </section>
+        </div>
+    </aside>
+    <main class="container-fluid">
+        <div>
+            <section class="section-adidas">
+                <div class="col-3">
+                    <h3>adidas yeezy boost 350 v2
+                        Zebra</h3>
+                    <img src="../assets/yeezy-zebra.jpg" alt="adidas-Yeezy-Boost-350-V2-zebra">
+                    <p><strong>$105.000</strong></p>
+                </div>
+                <div class="col-3">
+                    <h3>adidas yeezy boost 350 v2
+                        onyx</h3>
+                    <img src="../assets/yeezy-onyx.png" alt="adidas-Yeezy-Boost-350-V2-onyx" class="adidas-negro">
+                    <p><strong>$130.000</strong></p>
+                </div>
+                <div class="col-3">
+                    <h3>adidas forum buckle low
+                        bad bunny last forum</h3>
+                    <img src="../assets/forum-bad-bunny.jpg" alt="">
+                    <p><strong>$90.000</strong></p>
+                </div>
+                <div class="col-3">
+                    <h3>adidas ultra boost 4.0
+                        game of thrones white walkers</h3>
+                    <img src="../assets/ultra-boost-GOT.jpg" alt="adidas-ultra-boost-4.0-white-walkers">
+                    <p><strong>$170.000</strong></p>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer class="container-fluid">
+        <div>
+            <section class="section-footer">
+                <div>
+                    <p>Derechos reservados por LaceUpLand 2023 Para suscribirse al newsletter y recibir promociones e
+                        información registrarse en service@laceupland.com Buenos Aires, Argentina </p>
+                </div>
+                <div>
+                    <h2>redes sociales
+                        <ul>
+                            <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+                            <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+                            <li><a href="https://www.tiktok.com/" target="_blank">TikTok</a></li>
+                    </h2>
+                </div>
+                <div>
+                    <h2>centro de atención al cliente
+                        <ul>
+                            <li>Lunes a Viernes de 9 a 20 hs / sabado de 9 a 17 hs</li>
+                            <li><a href="https://mail.google.com/">Contacto</a></li>
+                            <li><a href="https://web.whatsapp.com/">Whatsapp</a></li>
+                            <li>0810-655-5301</li>
+                        </ul>
+                    </h2>
+                </div>
+            </section>
     </footer>
+    </div>
     <script src="../bootstrap-5.3.0-alpha3-dist/bootstrap-5.3.0-alpha3-dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
