--- a/pages/NIKE.html
+++ b/pages/NIKE.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page NIKE</title>
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <div class="hero">
         <header>
@@ -50,10 +52,10 @@
                     <p><strong>$68.400</strong></p>
                 </div>
                 <div class="img2">
-                <h3>jordan-1 retro high dark mocha</h3>
-                <img src="../assets/jordan-1.jpg" alt="jordan-1-retro-high-dark-mocha">
-                <p><strong>$60.000</strong></p>
-            </div>
+                    <h3>jordan-1 retro high dark mocha</h3>
+                    <img src="../assets/jordan-1.jpg" alt="jordan-1-retro-high-dark-mocha">
+                    <p><strong>$60.000</strong></p>
+                </div>
                 <div class="img3">
                     <h3>jordan 4 retro military black</h3>
                     <img src="../assets/jordan-2.jpg" alt="jordan-4-military-black-2022">
@@ -69,7 +71,7 @@
         <footer>
             <section class="section-footer">
                 <div>
-                    <p>Derechos reservados por LaceUpLand 2023 Para suscribirse al newsletter y 
+                    <p>Derechos reservados por LaceUpLand 2023 Para suscribirse al newsletter y
                         recibir promociones e
                         información registrarse en service@laceupland.com Buenos Aires, Argentina </p>
                 </div>
@@ -95,8 +97,12 @@
         </footer>
     </div>
     <script src="../bootstrap-5.3.0-alpha3-dist/bootstrap-5.3.0-alpha3-dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
