maquetacion para segunda entrega

--- a/pages/SALE.html
+++ b/pages/SALE.html
@@ -33,25 +33,25 @@
         </form>
         <section class="section-hot-sale">
             <div>
-                <h3></h3>
+                <h3>adidas forum low circoloco</h3>
                 <img src="../assets/adidas-black&red.webp" alt="adidas-forum-rojo-y-negro">
                 <p class="hot-sale-p">$64.999</p>
                 <p><strong>$59.999</strong></p>
             </div>
             <div>
-                <h3></h3>
+                <h3>adidas forum 84 low 8k</h3>
                 <img src="../assets/adidas-aqua.webp" alt="adidas-forum-aqua">
                 <p class="hot-sale-p">$85.999</p>
                 <p><strong>$79.999</strong></p>
             </div>
             <div>
-                <h3></h3>
+                <h3>air jordan 1 mid blue mint</h3>
                 <img src="../assets/jordan-aqua.webp" alt="jordan-1-aqua">
                 <p class="hot-sale-p">$62.999</p>
                 <p><strong>$53.999</strong></p>
             </div>
             <div>
-                <h3></h3>
+                <h3>air jordan 3 retro</h3>
                 <img src="../assets/jordan-purple.webp" alt="jordan-3-purpura">
                 <p class="hot-sale-p">$100.000</p>
                 <p><strong>$92.000</strong></p>
