--- a/pages/SALE.html
+++ b/pages/SALE.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="hero">
     <header>
         <h1 class="encabezado">LaceUpLand</h1>
         <section>
@@ -25,32 +26,41 @@
             </nav>
         </section>
     </header>
+    <aside>
+            <h2 class="hot-sale-aside">sneakers hot sale</h2>
+            <form action="">
+                <label for=""></label>
+                <input type="search">
+            </form>
+            <div class="filtro-sale">
+                <ul>
+                    <li>yeezy</li>
+                    <li>air jordan 1</li>
+                    <li>air jordan 3</li>
+                </ul>
+            </div>
+    </aside>
     <main class="main">
-        <h2 class="Hot-Sale">sneakers hot sale</h2>
-        <form action="">
-            <label for=""></label>
-            <input type="search">
-        </form>
         <section class="section-hot-sale">
-            <div>
+            <div class="im1">
                 <h3>adidas forum low circoloco</h3>
                 <img src="../assets/adidas-black&red.webp" alt="adidas-forum-rojo-y-negro">
                 <p class="hot-sale-p">$64.999</p>
                 <p><strong>$59.999</strong></p>
             </div>
-            <div>
+            <div class="im2">
                 <h3>adidas forum 84 low 8k</h3>
                 <img src="../assets/adidas-aqua.webp" alt="adidas-forum-aqua">
                 <p class="hot-sale-p">$85.999</p>
                 <p><strong>$79.999</strong></p>
             </div>
-            <div>
+            <div class="im3">
                 <h3>air jordan 1 mid blue mint</h3>
                 <img src="../assets/jordan-aqua.webp" alt="jordan-1-aqua">
                 <p class="hot-sale-p">$62.999</p>
                 <p><strong>$53.999</strong></p>
             </div>
-            <div>
+            <div class="im4">
                 <h3>air jordan 3 retro</h3>
                 <img src="../assets/jordan-purple.webp" alt="jordan-3-purpura">
                 <p class="hot-sale-p">$100.000</p>
@@ -60,11 +70,11 @@
     </main>
     <footer>
         <section class="section-footer">
-            <div>
+            <div class="info">
                 <p>Derechos reservados por LaceUpLand 2023 Para suscribirse al newsletter y recibir promociones e
                     información registrarse en service@laceupland.com Buenos Aires, Argentina </p>
             </div>
-            <div>
+            <div class="red">
                 <h2>redes sociales
                     <ul>
                         <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
@@ -72,7 +82,7 @@
                         <li><a href="https://www.tiktok.com/" target="_blank">TikTok</a></li>
                 </h2>
             </div>
-            <div>
+            <div class="clientes">
                 <h2>centro de atención al cliente
                     <ul>
                         <li>Lunes a Viernes de 9 a 20 hs / sabado de 9 a 17 hs</li>
@@ -84,6 +94,7 @@
             </div>
         </section>
     </footer>
+    </div>
     <script src="../bootstrap-5.3.0-alpha3-dist/bootstrap-5.3.0-alpha3-dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
