--- a/pages/ADIDAS.html
+++ b/pages/ADIDAS.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="las mejores zapatillas adidas del mercado a un precio imperdible, envio a todo el pais">
+    <meta name="keywords" content="zapatillas adidas, adidas forum, adidas yeezy, adidas exclusivo">
     <title>Document</title>
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
