--- a/pages/CONTACTO.html
+++ b/pages/CONTACTO.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="conoce las mejores marcas en calzado y zapatillas en el mejor distribuidor">
+    <meta name="keywords" content="ubicacion, quienes somos?, atencion al cliente, privacidad">
     <title>SOPORTE DE LA PAGINA</title>
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -34,10 +36,10 @@
                     maioresLorem ipsum dolor sit, amet consectetur adipisicing elit. Neque maxime quo, placeat, dolorem
                     officiis
                     praesentium nesciunt cum voluptas harum illo qui incidunt expedita obcaecati, aliquid hic possimus
-                    maioresLorem ipsum dolor sit, amet consectetur adipisicing elit. Neque maxime quo, placeat, dolorem
+                    maioresLorem ipsum dolor sit, <strong>amet</strong> consectetur adipisicing elit. Neque maxime quo, placeat, dolorem
                     officiis
                     praesentium nesciunt cum voluptas harum illo qui incidunt expedita obcaecati, aliquid hic possimus
-                    maioresLorem ipsum dolor sit, amet consectetur adipisicing elit. Neque maxime quo, placeat, dolorem
+                    maioresLorem <strong>ipsum</strong> dolor sit, amet consectetur adipisicing elit. Neque maxime quo, placeat, dolorem
                     officiis
                     praesentium nesciunt cum voluptas harum illo qui incidunt expedita obcaecati, aliquid hic possimus
                     maiores
@@ -70,14 +72,14 @@
                     quia eligendi commodi harum facilis quae iste sunt, dignissimos veritatis, nemo sed veniam accusamus
                     nisi
                     officia quidem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem suscipit neque
-                    praesentium
+                    <strong>praesentium</strong>
                     temporibus
                     quia eligendi commodi harum facilis quae iste sunt, dignissimos veritatis, nemo sed veniam accusamus
                     nisi
                     officia quidem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem suscipit neque
                     praesentium
                     temporibus
-                    quia eligendi commodi harum facilis quae iste sunt, dignissimos veritatis, nemo sed veniam accusamus
+                    quia eligendi <strong>commodi harum</strong> facilis quae iste sunt, dignissimos veritatis, nemo sed veniam accusamus
                     nisi
                     officia quidem.</p>
             </div>
