--- a/pages/NIKE.html
+++ b/pages/NIKE.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="las mejores zapatillas nike y jordan del mercado a un precio imperdible, envio a todo el pais">
+    <meta name="keywords" content="zapatillas nike, zapatillas jordan, air jordan, jordan exclusivo">
     <title>Page NIKE</title>
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
